@@ -3,9 +3,10 @@ New entries should be added at the top
 2005-01-18 Added accents to mathtext: \hat, \breve, \grave, \bar,
   \acute, \tilde, \vec, \dot, \ddot.  All of them have the same
   syntax, eg to make an overbar you do \bar{o} or to make an o umlaut
-  you do \ddot{o} - JDH
+  you do \ddot{o}. The shortcuts are also provided, eg: \"o \'e \`e
+  \~n \.x \^y - JDH
 
-2005-01-18 Plugged an image resize memory leaks - JDH
+2005-01-18 Plugged image resize memory leaks - JDH
 
 2005-01-18 Fixed some mathtext parser problems relating to superscripts
 
